--- a/index.html
+++ b/index.html
@@ -7,14 +7,23 @@
         <title>
             Prisoner Interagation Assignment
         </title>
+        <!-- CSS -->
+        <link rel="stylesheet" href="css/style.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
   
     <body>
         <div class="main">
+            <div class="header">
+                <img src="img/FO_Logo.png" alt="First Order Logo" />
+                <h1>Prisoner Interagation Assignement</h1>
+            </div>
+            <br />
+            <div class="canvas">
             <input id="hex" placeholder="enter hex color"></input>
             <button onclick="clearall()">clear</button>
             <canvas id="myCanvas"></canvas>
+            </div>
         </div>
     </body>
   
