--- a/index.html
+++ b/index.html
@@ -15,14 +15,17 @@
     <body>
         <div class="main">
             <div class="header">
-                <img src="img/FO_Logo.png" alt="First Order Logo" />
-                <h1>Prisoner Interagation Assignement</h1>
+                <div class="headerlogo">
+                    <img src="img/FO_Logo.png" alt="First Order Logo" />
+                </div>
+                <div class="headertext">
+                    <h1>Prisoner Interagation Assignement</h1>
+                </div>
             </div>
             <br />
             <div class="canvas">
-            <input id="hex" placeholder="enter hex color"></input>
-            <button onclick="clearall()">clear</button>
-            <canvas id="myCanvas"></canvas>
+                <button onclick="clearall()">clear</button>
+                <canvas id="myCanvas"></canvas>
             </div>
         </div>
     </body>
